--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@react-navigation/bottom-tabs": "^6.4.3",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/stack": "^6.3.7",
+    "axios": "^1.2.1",
+    "babel-plugin-dotenv-import": "^3.0.1",
     "expo": "~46.0.13",
+    "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
